# rust_championship

./: Cargo.toml  README.md
examples/: even.rs  odd.rs
src/: lib.rs
tests/: tests.rs
