[package]
authors = ["bleaklake"]
name = "championship"
description = "Generate championship fixtures using the round-robin tournament algorithm"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/bleaklake/rust_championship"
repository = "https://github.com/bleaklake/rust_championship"
documentation = "https://github.com/bleaklake/rust_championship/blob/main/README.md"
readme = "README.md"
keywords = ["utility", "vector", "sport", "round-robin"]
categories = ["accessibility", "algorithms", "mathematics", "science"]
